--- a/HTML/index.html
+++ b/HTML/index.html
@@ -35,7 +35,7 @@
 
         <!-- I place my picture stuff here -->
         <div class="picture">
-            <a href="html_practice.html"><img href="html_practice.html" src="Hassan's front profile.jpg"></a>
+            <a href="html_practice.html"><img href="html_practice.html" src="Hassan's_front_profile.jpg"></a>
         </div>
 
         
