--- a/Double_trouble.html
+++ b/Double_trouble.html
@@ -16,6 +16,7 @@
             </div>
             <img class ="stuff" style="width: 100%; height: 100%;" src="make_it_rain2.gif">
             <audio src="money_sfx.mp3" autoplay>
+            <script src=""  defer></script>
         </body>
     
 </html>
