--- a/hometown.html
+++ b/hometown.html
@@ -52,6 +52,6 @@
         </div>
         
         
-        <!-- <script src="" async defer></script> -->
+        <script src=""  defer></script>
     </body>
 </html>
