--- a/food.html
+++ b/food.html
@@ -57,6 +57,6 @@
         </div>
 
         
-        <script src="" async defer></script>
+        <script src=""  defer></script>
     </body>
 </html>
