--- a/profile.html
+++ b/profile.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-            <meta charset="utf-8">
-            <meta http-equiv="X-UA-Compatible" content="IE=edge">
-            <title>Profile</title>
-            <meta name="description" content="">
-            <meta name="viewport" content="width=device-width, initial-scale=1">
-            <link rel="stylesheet" href="style.css">
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title>Profile</title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body style="background-color:#DDD0C8">
@@ -42,6 +42,6 @@
 
         </div>
         
-        <script src="" async defer></script>
+        <script src=""  defer></script>
     </body>
 </html>
