--- a/tourist.html
+++ b/tourist.html
@@ -48,6 +48,6 @@
             </p>
         </div>
 
-        <script src="" async defer></script>
+        <script src=""  defer></script>
     </body>
 </html>
